# backend/src/todo/todo.controller.ts
@@ -1,7 +1,7 @@
-import { Controller, Get } from "@nestjs/common";
+import { Body, Controller, Get, Post } from "@nestjs/common";
 import { ApiOperation, ApiResponse, ApiTags } from "@nestjs/swagger";
 import { TodoService } from "./todo.service";
-import { TodoDto } from "./dto/todo";
+import { CreateTodoDto, TodoDto } from "./dto/todo";
 
 @ApiTags("todos")
 @Controller("todos")
@@ -17,5 +17,16 @@ export class TodoController {
   })
   async findAll(): Promise<TodoDto[]> {
     return this.todoService.getTodos();
+  }
+
+  @Post("create")
+  @ApiOperation({ summary: "Todoを追加します" })
+  @ApiResponse({
+    status: 201,
+    description: "Todoが追加されました",
+    type: TodoDto,
+  })
+  async create(@Body() todo: CreateTodoDto): Promise<TodoDto> {
+    return this.todoService.create(todo);
   }
 }
